<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/reminder_header">

        <SwitchPreference
            app:key="@string/pref_key_notify"
            app:summary="@string/pref_notify_summary"
            app:title="@string/pref_notify_name"
            app:defaultValue="false" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/display_header">

        <ListPreference
            app:defaultValue="@string/pref_dark_auto"
            app:key="@string/pref_key_dark"
            app:title="@string/pref_dark_title"
            app:entries="@array/dark_mode"
            app:entryValues="@array/dark_mode_value"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

</androidx.preference.PreferenceScreen>