<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_status"
        android:orderInCategory="100"
        android:title="@string/action_status"
        android:icon="@drawable/ic_reading_status"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_list"
        android:orderInCategory="101"
        android:title="@string/action_showList"
        android:icon="@drawable/ic_show_list"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="102"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_settings"
        app:showAsAction="ifRoom" />
</menu>